# tm-section-rag

./: LICENCE  README.md  example.md  pyproject.toml  requirements.txt
docker/: .dockerignore  .env.example  compose.yml
scripts/: process_pdfs.py
src/: .env.example  main.py
src/embedding/: embed.py
src/generation/: generate.py
src/ingestion/: processing.py  vlm.py
src/store/: qdrant_store.py
src/utils/: util.py
